fix deploy config

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,12 @@ script:
   - docker run aksyonov/docker-react npm run test -- --coverage
 
 deploy:
-  - provider: elasticbeanstalk
-  - region: "us-east-2"
-  - app: "docker-react"
-  - env: "DockerReact-env"
-  - bucket_name: "elasticbeanstalk-us-east-2-158893448472"
-  - bucket_path: "docker-react"
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-east-2-158893448472"
+  bucket_path: "docker-react"
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
